--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="icon" href="https://koza.rip/assets/Icon-Black.png">
 	</head>
 
-	<body onload="cardData()">
+	<body>
 		<div class="wrapper">
 			<div class="row header">
 				<div class="column">
