--- a/cards/proseka/en/index.html
+++ b/cards/proseka/en/index.html
@@ -15,14 +15,14 @@
   <script src="../js/cards.min.js"></script>
 </head>
 
-<body onload="startup()" style="background-image: url('/assets/bg/proseka.png'); background-color: #c46b9b; background-position: top left; background-size: initial; background-repeat: repeat;">
+<body onload="startup()" style="background-image: url('https://koza.rip/assets/bg/proseka.png'); background-color: #c46b9b; background-position: top left; background-size: initial; background-repeat: repeat;">
   <nav class="navbar bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand text-light" href="https://koza.rip"><img class="brand-icon d-inline-block align-text-top" src="https://koza.rip/assets/Logo-White.png" alt=""></a>
       <div class="container text-center">
         <span class="text-light"><h1>Project SEKAI Card Tracker (EN)</h1></span>
       </div>
-      <a class="btn btn-light" role="button" href="https://koza.rip/trackers/cards/proseka/jp/">JP Version</a>
+      <a class="btn btn-light" role="button" href="https://tracker.koza.rip/cards/proseka/jp/">JP Version</a>
     </div>
   </nav>
 
