--- a/cards/proseka/jp/index.html
+++ b/cards/proseka/jp/index.html
@@ -22,7 +22,7 @@
       <div class="container text-center">
         <span class="text-light"><h1>Project SEKAI Card Tracker (JP)</h1></span>
       </div>
-      <a class="btn btn-light" role="button" href="https://koza.rip/trackers/cards/proseka/en/">EN Version</a>
+      <a class="btn btn-light" role="button" href="https://tracker.koza.rip/cards/proseka/en/">EN Version</a>
     </div>
   </nav>
 
