--- a/cd/proseka/index.html
+++ b/cd/proseka/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="https://koza.rip/assets/Icon-Black.png">
 
   <script type="text/javascript" src="https://sorter.koza.rip/js/globals.js"></script>
-  <script src="/assets/papaparse.min.js"></script>
+  <script src="https://koza.rip/assets/vendor/papaparse.min.js"></script>
   <script src="js/checklist.js"></script>
 </head>
 
